# pyoxidizer-example

./: pyoxidizer.bzl  pyproject.toml
app/: __main__.py
